[package]
name    = "ulid"
publish = false
version = "0.1.5"

edition      = "2021"
rust-version = "1.74.0"

[lib]
crate-type = ["cdylib"]

[features]
default = ["pg16"]
pg16    = ["pgrx-tests/pg16", "pgrx/pg16"]
pg_test = []

[dependencies]
inner_ulid = { package = "ulid", version = "1.0.0" }
pgrx       = "^0.11.2"

[dev-dependencies]
pgrx-tests = "^0.11.2"

[profile.dev]
panic = "unwind"

[profile.release]
codegen-units = 1
lto           = "fat"
opt-level     = 3
panic         = "unwind"
